--- a/messages.html
+++ b/messages.html
@@ -36,7 +36,7 @@
                 <li><a href="messages.html" class="nav-link item"><i class="fas fa-envelope-open-text fa-2x"></i></a></li>
                 <li><a href="https://calendar.google.com/" class="nav-link item"><i class="fas fa-calendar fa-2x"></i></a></li>
             </ul>
-            <a href="https://github.com/rzubrr" class="nav-link" target="_blank" id="github"><i
+            <a href="https://github.com/rzubrr/AdminUI" class="nav-link" target="_blank" id="github"><i
                     class="fab fa-github fa-3x"></i></a>
         </div>
         <section id="main">
