Added GitLab ref

--- a/index.html
+++ b/index.html
@@ -36,8 +36,11 @@
                 <li><a href="messages.html" class="nav-link item"><i class="fas fa-envelope-open-text fa-2x"></i></a></li>
                 <li><a href="https://calendar.google.com/" class="nav-link item"><i class="fas fa-calendar fa-2x"></i></a></li>
             </ul>
-            <a href="https://github.com/rzubrr/AdminUI" class="nav-link" target="_blank" id="github"><i
+            <div id="links">
+                <a href="https://github.com/rzubrr/AdminUI" class="nav-link" target="_blank" id="github"><i
                     class="fab fa-github fa-3x"></i></a>
+                <a href="https://gitlab.com/rzubrr/adminui" class="nav-link" target="_blank" id="gitlab"><i class="fab fa-gitlab fa-3x"></i></a>
+            </div>
         </div>
         <section id="main">
             <div class="container-fluid" id="dashboard">
